# slick_socket

./: .gitignore  CHANGELOG  CMakeLists.txt  LICENSE  README.md  example.cpp
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
cmake/: slick-socketConfig.cmake.in
examples/: CMakeLists.txt  logger.h  multicast_integration_example.cpp  multicast_receiver_example.cpp  multicast_sender_example.cpp  tcp_client_example.cpp  tcp_server_example.cpp
include/slick/socket/: logger.h  multicast_receiver.h  multicast_receiver_unix.h  multicast_receiver_win32.h  multicast_sender.h  multicast_sender_unix.h  multicast_sender_win32.h  tcp_client.h  tcp_client_unix.h  tcp_client_win32.h  tcp_server.h  tcp_server_unix.h  tcp_server_win32.h
include/slick_socket/: logger.h  multicast_receiver.h  multicast_receiver_unix.h  multicast_receiver_win32.h  multicast_sender.h  multicast_sender_unix.h  multicast_sender_win32.h  tcp_client.h  tcp_client_unix.h  tcp_client_win32.h  tcp_server.h  tcp_server_unix.h  tcp_server_win32.h
src/: CMakeLists.txt  ilogger.h  logger.h  multicast_receiver.h  multicast_receiver_unix.h  multicast_receiver_win32.h  multicast_sender.h  tcp_client.h  tcp_client_unix.h  tcp_server.h  tcp_server_base.h  tcp_server_base_imp.h  tcp_server_unix.h  tcp_server_win32.h
tests/: CMakeLists.txt  integration_tests.cpp  mock_network.h  multicast_receiver_tests.cpp  multicast_sender_tests.cpp  tcp_client_tests.cpp  tcp_server_tests.cpp  test_fixtures.h
